fix(form) Give the shortcut key help a z-index

--- a/app/styles/demo-bs-common.less
+++ b/app/styles/demo-bs-common.less
@@ -251,7 +251,8 @@ hr.soften {
   margin-top: 5em;
   position: fixed;
   border: 3px solid rgba(3, 154, 239, 0.45);
-  box-shadow: inset -4px -4px 0 #bbb;
+  box-shadow: inset 0 2px 2px 0 #bbb;
+  z-index: 99;
 
   .key {
     display: inline-block;
